[package]
name = "desec-client"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }
